# cardano-gov-voting

./: .gitignore  .gitmodules  README.md  server.py
.github/workflows/: backend.yml  docker.yml  frontend.yml
backend/: .env.example  README.md  pyproject.toml  server.py  template.typ
container/: Dockerfile  Dockerfile.dockerignore  compose.yml
frontend/: .gitignore  ARCHITECTURE.md  README.md  elm-watch.json  elm.json  package-lock.json  package.json  tailwind.config.js
frontend/review/: elm.json
frontend/review/src/: ReviewConfig.elm
frontend/review/suppressed/: NoPrematureLetComputation.json  NoUnused.CustomTypeConstructors.json  NoUnused.Variables.json
frontend/src/: Api.elm  Footer.elm  Header.elm  Helper.elm  Main.elm  Navigation.elm  ProposalMetadata.elm  ScriptInfo.elm  Storage.elm  WalletConnector.elm
frontend/src/ConcurrentTask/: Extra.elm
frontend/src/Page/: Disclaimer.elm  MultisigRegistration.elm  Pdf.elm  Preparation.elm  Signing.elm
frontend/static/: elm-concurrent-task.js  index.html  json-ld-contexts.js  storage.js
